objdiff-core/tests/snapshots/arch_x86__read_x86-2.snap
---
source: objdiff-core/tests/arch_x86.rs
expression: diff.instruction_rows
---
[
    InstructionDiffRow {
        ins_ref: Some(
            InstructionRef {
                address: 0,
                size: 1,
                opcode: 640,
                branch_dest: None,
            },
        ),
        kind: None,
        branch_from: None,
        branch_to: None,
        arg_diff: [],
        masked_equal: false,
    },
    InstructionDiffRow {
        ins_ref: Some(
            InstructionRef {
                address: 1,
                size: 2,
                opcode: 414,
                branch_dest: None,
            },
        ),
        kind: None,
        branch_from: None,
        branch_to: None,
        arg_diff: [],
        masked_equal: false,
    },
    InstructionDiffRow {
        ins_ref: Some(
            InstructionRef {
                address: 3,
                size: 5,
                opcode: 640,
                branch_dest: None,
            },
        ),
        kind: None,
        branch_from: None,
        branch_to: None,
        arg_diff: [],
        masked_equal: false,
    },
    InstructionDiffRow {
        ins_ref: Some(
            InstructionRef {
                address: 8,
                size: 5,
                opcode: 59,
                branch_dest: None,
            },
        ),
        kind: None,
        branch_from: None,
        branch_to: None,
        arg_diff: [],
        masked_equal: false,
    },
    InstructionDiffRow {
        ins_ref: Some(
            InstructionRef {
                address: 13,
                size: 3,
                opcode: 7,
                branch_dest: None,
            },
        ),
        kind: None,
        branch_from: None,
        branch_to: None,
        arg_diff: [],
        masked_equal: false,
    },
    InstructionDiffRow {
        ins_ref: Some(
            InstructionRef {
                address: 16,
                size: 1,
                opcode: 590,
                branch_dest: None,
            },
        ),
        kind: None,
        branch_from: None,
        branch_to: None,
        arg_diff: [],
        masked_equal: false,
    },
    InstructionDiffRow {
        ins_ref: Some(
            InstructionRef {
                address: 17,
                size: 1,
                opcode: 662,
                branch_dest: None,
            },
        ),
        kind: None,
        branch_from: None,
        branch_to: None,
        arg_diff: [],
        masked_equal: false,
    },
]
