objdiff-core/tests/snapshots/arch_x86__read_x86_64-2.snap
---
source: objdiff-core/tests/arch_x86.rs
expression: diff.instruction_rows
---
[
    InstructionDiffRow {
        ins_ref: Some(
            InstructionRef {
                address: 0,
                size: 5,
                opcode: 414,
                branch_dest: None,
            },
        ),
        kind: None,
        branch_from: None,
        branch_to: None,
        arg_diff: [],
        masked_equal: false,
    },
    InstructionDiffRow {
        ins_ref: Some(
            InstructionRef {
                address: 5,
                size: 5,
                opcode: 414,
                branch_dest: None,
            },
        ),
        kind: None,
        branch_from: None,
        branch_to: None,
        arg_diff: [],
        masked_equal: false,
    },
    InstructionDiffRow {
        ins_ref: Some(
            InstructionRef {
                address: 10,
                size: 1,
                opcode: 640,
                branch_dest: None,
            },
        ),
        kind: None,
        branch_from: None,
        branch_to: None,
        arg_diff: [],
        masked_equal: false,
    },
    InstructionDiffRow {
        ins_ref: Some(
            InstructionRef {
                address: 11,
                size: 4,
                opcode: 740,
                branch_dest: None,
            },
        ),
        kind: None,
        branch_from: None,
        branch_to: None,
        arg_diff: [],
        masked_equal: false,
    },
    InstructionDiffRow {
        ins_ref: Some(
            InstructionRef {
                address: 15,
                size: 5,
                opcode: 414,
                branch_dest: None,
            },
        ),
        kind: None,
        branch_from: None,
        branch_to: None,
        arg_diff: [],
        masked_equal: false,
    },
    InstructionDiffRow {
        ins_ref: Some(
            InstructionRef {
                address: 20,
                size: 5,
                opcode: 414,
                branch_dest: None,
            },
        ),
        kind: None,
        branch_from: None,
        branch_to: None,
        arg_diff: [],
        masked_equal: false,
    },
    InstructionDiffRow {
        ins_ref: Some(
            InstructionRef {
                address: 25,
                size: 4,
                opcode: 448,
                branch_dest: None,
            },
        ),
        kind: None,
        branch_from: None,
        branch_to: None,
        arg_diff: [],
        masked_equal: false,
    },
    InstructionDiffRow {
        ins_ref: Some(
            InstructionRef {
                address: 29,
                size: 4,
                opcode: 460,
                branch_dest: None,
            },
        ),
        kind: None,
        branch_from: None,
        branch_to: None,
        arg_diff: [],
        masked_equal: false,
    },
    InstructionDiffRow {
        ins_ref: Some(
            InstructionRef {
                address: 33,
                size: 5,
                opcode: 414,
                branch_dest: None,
            },
        ),
        kind: None,
        branch_from: None,
        branch_to: None,
        arg_diff: [],
        masked_equal: false,
    },
    InstructionDiffRow {
        ins_ref: Some(
            InstructionRef {
                address: 38,
                size: 5,
                opcode: 414,
                branch_dest: None,
            },
        ),
        kind: None,
        branch_from: None,
        branch_to: None,
        arg_diff: [],
        masked_equal: false,
    },
    InstructionDiffRow {
        ins_ref: Some(
            InstructionRef {
                address: 43,
                size: 5,
                opcode: 448,
                branch_dest: None,
            },
        ),
        kind: None,
        branch_from: None,
        branch_to: None,
        arg_diff: [],
        masked_equal: false,
    },
    InstructionDiffRow {
        ins_ref: Some(
            InstructionRef {
                address: 48,
                size: 5,
                opcode: 460,
                branch_dest: None,
            },
        ),
        kind: None,
        branch_from: None,
        branch_to: None,
        arg_diff: [],
        masked_equal: false,
    },
    InstructionDiffRow {
        ins_ref: Some(
            InstructionRef {
                address: 53,
                size: 4,
                opcode: 11,
                branch_dest: None,
            },
        ),
        kind: None,
        branch_from: None,
        branch_to: None,
        arg_diff: [],
        masked_equal: false,
    },
    InstructionDiffRow {
        ins_ref: Some(
            InstructionRef {
                address: 57,
                size: 5,
                opcode: 414,
                branch_dest: None,
            },
        ),
        kind: None,
        branch_from: None,
        branch_to: None,
        arg_diff: [],
        masked_equal: false,
    },
    InstructionDiffRow {
        ins_ref: Some(
            InstructionRef {
                address: 62,
                size: 5,
                opcode: 414,
                branch_dest: None,
            },
        ),
        kind: None,
        branch_from: None,
        branch_to: None,
        arg_diff: [],
        masked_equal: false,
    },
    InstructionDiffRow {
        ins_ref: Some(
            InstructionRef {
                address: 67,
                size: 5,
                opcode: 448,
                branch_dest: None,
            },
        ),
        kind: None,
        branch_from: None,
        branch_to: None,
        arg_diff: [],
        masked_equal: false,
    },
    InstructionDiffRow {
        ins_ref: Some(
            InstructionRef {
                address: 72,
                size: 5,
                opcode: 460,
                branch_dest: None,
            },
        ),
        kind: None,
        branch_from: None,
        branch_to: None,
        arg_diff: [],
        masked_equal: false,
    },
    InstructionDiffRow {
        ins_ref: Some(
            InstructionRef {
                address: 77,
                size: 4,
                opcode: 11,
                branch_dest: None,
            },
        ),
        kind: None,
        branch_from: None,
        branch_to: None,
        arg_diff: [],
        masked_equal: false,
    },
    InstructionDiffRow {
        ins_ref: Some(
            InstructionRef {
                address: 81,
                size: 4,
                opcode: 7,
                branch_dest: None,
            },
        ),
        kind: None,
        branch_from: None,
        branch_to: None,
        arg_diff: [],
        masked_equal: false,
    },
    InstructionDiffRow {
        ins_ref: Some(
            InstructionRef {
                address: 85,
                size: 1,
                opcode: 590,
                branch_dest: None,
            },
        ),
        kind: None,
        branch_from: None,
        branch_to: None,
        arg_diff: [],
        masked_equal: false,
    },
    InstructionDiffRow {
        ins_ref: Some(
            InstructionRef {
                address: 86,
                size: 1,
                opcode: 662,
                branch_dest: None,
            },
        ),
        kind: None,
        branch_from: None,
        branch_to: None,
        arg_diff: [],
        masked_equal: false,
    },
]
